[project]
name = "styxpodman"
version = "0.1.0"
description = "Podman integration for Styx compiled wrappers"
authors = [
  {name = "Jason Kai", email = "21226986+kaitj@users.noreply.github.com"}
]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
dependencies = ["styxdefs>=0.6.0,<0.7"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest-cov>=7.0.0",
  "ruff>=0.15.2",
  "deptry>=0.24.0"
]
docs = ["pdoc>=15.0.0"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
indent-width = 4
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
select = ["ANN", "D", "E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = []

[build-system]
requires = ["uv_build>=0.8.13,<0.10.0"]
build-backend = "uv_build"
